photoprism-melissa/photoprism-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: photoprism-melissa
spec:
  selector:
    matchLabels:
      app: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      nodeSelector:
        kubernetes.io/hostname: crobasaurusrex
      containers:
      - name: photoprism
        image: photoprism/photoprism:240531
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /assets/photos/originals
          name: photoprism-storage
          subPath: media/photos
        - mountPath: /assets/cache
          name: photoprism-storage
          subPath: cache
        - mountPath: /assets/photos/import
          name: photoprism-storage
          subPath: import
        - mountPath: /assets/photos/export
          name: photoprism-storage
          subPath: export
        livenessProbe:
          httpGet:
            path: /api/v1/status
            port: http
          failureThreshold: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /api/v1/status
            port: http
          failureThreshold: 30
          periodSeconds: 10
      volumes:
      - name: photoprism-storage
        persistentVolumeClaim:
          claimName: photoprism-pvc
