photoprism-melissa/photoprism-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism-db
  labels:
    app: photoprism
  namespace: photoprism-melissa
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      pod-label: photoprism-db-pod
  template:
    metadata:
      labels:
        pod-label: photoprism-db-pod
    spec:
      nodeSelector:
        kubernetes.io/hostname: crobasaurusrex
      containers:
      - name: mariadb
        image: mariadb:11.0.3
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: photoprism-db-pvc
      - name: passwordresetscript
        configMap:
          defaultMode: 0555
          name: password-reset-script
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism-db
  labels:
    app: photoprism
  namespace: photoprism-melissa
spec:
  selector:
    pod-label: photoprism-db-pod
  ports:
  - protocol: TCP
    port: 3306
