photoprism-melissa/photoprism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism-melissa
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: ClusterIP
